--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,6 @@
 	padding: 1.5rem 0;
 	margin-bottom: 3rem;
 	width: 100%;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 	padding-bottom: 1.5rem;
 }
 
